--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=HangDiaThoiDai
 server.port = 9090
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;database=HangDiaThoiDai;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
-spring.datasource.username=security_su
-spring.datasource.password=1234567@a$
+spring.datasource.username=sa
+spring.datasource.password=abcd123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=update
