--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hangdiathoidai
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+upload.dir=uploads/images
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
