--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=HangDiaThoiDai
 server.port = 8081
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=HangDiaThoiDai;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
-spring.datasource.username=sa
-spring.datasource.password=12345678
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;database=HangDiaThoiDai;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
+#spring.datasource.username=sa
+#spring.datasource.password=12345678
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
@@ -12,15 +12,17 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/hangdiathoidai
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/hangdiathoidai
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-upload.dir=./uploads
+upload.dir.user=./src/main/resources/static/assets/img/avatar/
+upload.dir.product=./src/main/resources/static/assets/img/products/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
+
