--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.port = 8081
 #spring.datasource.password=abcd123
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;database=HangDiaThoiDai;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
-#spring.datasource.username=sa
-#spring.datasource.password=12345678
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=HangDiaThoiDai;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
+spring.datasource.username=sa
+spring.datasource.password=12345678
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -20,10 +20,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hangdiathoidai
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/hangdiathoidai
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
